--- a/download/beta.html
+++ b/download/beta.html
@@ -1,4 +1,18 @@
+---
+layout: page
+hideNav: true
+title: Download Latest Beta
+permalink: /download/beta/
+---
+
 <script type="text/javascript">
-  window.location =
-    "https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/beta";
+  document.addEventListener("DOMContentLoaded", () => {
+    window.location =
+      "https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/beta";
+  });
 </script>
+
+<a
+  href="https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/beta"
+  >Click Here if the download does not start automatically</a
+>
