--- a/download/stable.html
+++ b/download/stable.html
@@ -1,4 +1,18 @@
+---
+layout: page
+hideNav: true
+title: Download Latest Version
+permalink: /download/stable/
+---
+
 <script type="text/javascript">
-  window.location =
-    "https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/stable";
+  document.addEventListener("DOMContentLoaded", () => {
+    window.location =
+      "https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/stable";
+  });
 </script>
+
+<a
+  href="https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/stable"
+  >Click Here if the download does not start automatically</a
+>
