feat: show arm64 downloads
ref https://github.com/Xiphe/budgetbudget/issues/68

--- a/download/stable.html
+++ b/download/stable.html
@@ -7,8 +7,7 @@ permalink: /download/stable/
 
 <script type="text/javascript">
   document.addEventListener("DOMContentLoaded", () => {
-    window.location =
-      "https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/stable";
+    window.location = "/download/?channel=stable";
   });
 </script>
 
