--- a/download/alpha.html
+++ b/download/alpha.html
@@ -7,8 +7,7 @@ permalink: /download/alpha/
 
 <script type="text/javascript">
   document.addEventListener("DOMContentLoaded", () => {
-    window.location =
-      "https://pk7uo1n3r0.execute-api.eu-west-1.amazonaws.com/prod/download/alpha";
+    window.location = "/download/?channel=alpha";
   });
 </script>
 
